# src/swagger.json
@@ -9,6 +9,36 @@
     }
   },
   "paths":{
+    "/categories/import": {
+      "post": {
+        "tags": ["Category"],
+        "summary": "Upload a new category",
+        "description": "Upload a new category",
+        "security": [
+          { "bearerAuth": []}
+         ],
+        "requestBody": {
+          "content": {
+            "multipart/form-data": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "file": {
+                    "type": "string",
+                    "format": "binary"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "201": {
+            "description": "Created"
+          }
+        }
+      }
+    },
     "/categories":{
       "post":{
         "tags":["Category"],
@@ -48,6 +78,69 @@
         "tags":["Category"],
         "sumary":"List alll Categories",
         "description":"List all categories",
+        "responses":{
+          "200":{
+            "description":"Success",
+             "content":{
+               "application/json":{
+                 "type":"array",
+                 "items":{
+                   "type":"object",
+                   "properties":{
+                     "name":{
+                       "type":"string"
+                     },
+                     "description":{
+                       "type":"string"
+                     }
+                   }
+                 }
+               }
+             }
+          }
+        }
+      }
+    },
+
+    "/specifications":{
+      "post":{
+        "tags":["Specifications"],
+        "sumary":"Create Specification",
+        "description":"Create a new specification",
+        "requestBody":{
+          "content":{
+            "application/json":{
+              "schema":{
+                "type":"object",
+                "properties":{
+                  "name":{
+                    "type":"string"
+                  },
+                  "description":{
+                    "type":"string"
+                  }
+                },
+                "example":{
+                  "name":"Specification name example",
+                  "description":"Specification description example"
+                }
+              }
+            }
+          }
+        },
+        "responses":{
+          "201":{
+            "description":"Created"
+          },
+          "500":{
+            "description":"Specification already exists"
+          }
+        }
+      },
+      "get":{
+        "tags":["Specifications"],
+        "sumary":"List alll Specification",
+        "description":"List all Specification",
         "responses":{
           "200":{
             "description":"Success",
